--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="https://dashboard.heroku.com/images/favicon.ico" type="image/vnd.microsoft.icon">
     <style>
         body {
             font-family: sans-serif;
