--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,9 @@
             font-size: 20px;
         }
         .new_user {
-            color: #666;
+            color: #777;
+            font-style: italic;
+            font-size: 75%;
         }
     </style>
 </head>
