--- a/views/index.ejs
+++ b/views/index.ejs
@@ -174,12 +174,10 @@
             "&": "&amp;",
             "<": "&lt;",
             ">": "&gt;",
-            '"': '&quot;',
-            "'": '&#39;',
             "/": '&#x2F;'
         };
         function escapeHtml(string) {
-            return String(string).replace(/[&<>"'\/]/g, function (s) {
+            return String(string).replace(/[&<>\/]/g, function (s) {
                 return entityMap[s];
             });
         }
